fix(*): resolving overflow-hidden in home page

--- a/src/shared/styles/global.css
+++ b/src/shared/styles/global.css
@@ -11,7 +11,7 @@
 
   html,
   body {
-    @apply min-h-screen min-w-full bg-zinc-1000 text-zinc-100 overflow-hidden;
+    @apply min-h-screen min-w-full bg-zinc-1000 text-zinc-100;
   }
 
   h1,
